# deisa-dask

./: .gitignore  .gitmodules  CHANGELOG.md  codemeta.json  pydoc-markdown.yaml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: benchmarks_base.yml  benchmarks_pr.yml  benchmarks_pr_archive.yml  benchmarks_pr_track.yml  hugo.yml  lint.yml  pages.yaml  python-publish.yml  tests.yml
benchmark/: Dockerfile  test_dask_queue.py  test_time_to_callback.py
benchmark/scatter/g5k/: launcher.sh
benchmark/scatter/local/: README.md  channels.scm  connect-clients.py  launch-local.sh  manifest.scm  plot_clients_vs_latency.py  plot_size_vs_latency.py
deisa/: __init__.py  __version__.py  deisa.py
example/getting-started/: analysis.py  launch.sh  simulation.py
site/: CNAME  hugo.yaml
site/archetypes/: default.md
site/content/: _index.md
site/content/about/: _index.md
site/content/archives/: _index.md
site/content/blog/: 0.5.1.md  0.6.0.md  0.6.1.md  0.6.2.md  _index.md  first_post.md  second_post.md
site/content/docs/: _index.md  getting-started.md  public-api.md
site/content/glossary/: _index.md
site/public/: en.search-data.json  index.html  index.xml  sitemap.xml
site/public/about/: index.html  index.xml
site/public/archives/: index.html  index.xml
site/public/blog/: index.html  index.xml
site/public/blog/first_post/: index.html
site/public/blog/page/1/: index.html
site/public/blog/second_post/: index.html
site/public/categories/: index.html
site/public/docs/: index.html  index.xml
site/public/glossary/: index.html  index.xml
site/public/js/: main.js
site/public/tags/: index.html
src/deisa/dask/: __init__.py  __version__.py  bridge.py  communicator.py  constants.py  deisa.py  handshake.py  pubsub.py  tools.py  types.py  utils.py
test/: TestSimulator.py  pytest.ini  test-scheduler-error.json  test-scheduler.json  test_bridge.py  test_comm.py  test_deisa.py  test_fakecomm.py  test_handshake.py  test_mpi.py  test_per_array_communicator.py  test_validator.py  utils.py
