[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deisa-dask"
dynamic = ["version", "readme"]
description = "Deisa: Dask-Enabled In Situ Analytics"
license = { text = "MIT" }
authors = [
  { name = "Benoît Martin", email = "bmartin@cea.fr" }
]
requires-python = ">=3.10"
keywords = ["deisa", "in-situ"]

dependencies = [
  "deisa-core>=0.4.0",
  "dask",
  "distributed",
  "toolz"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-timeout",
  "pytest-xdist",
  "numpy"
]
mpi = [
  "mpi4py"
]

[project.urls]
Homepage = "https://github.com/deisa-project/deisa-dask"
"Bug Reports" = "https://github.com/deisa-project/deisa-dask/issues"
Source = "https://github.com/deisa-project/deisa-dask"

[tool.hatch.build.targets.wheel]
packages = ["src/deisa"]

[tool.hatch.version]
path = "src/deisa/dask/__version__.py"

[tool.hatch.metadata]
readme = "README.md"