[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deisa-dask"
dynamic = ["version", "readme"]
description = "Deisa: Dask-Enabled In Situ Analytics"
license = { text = "MIT" }
authors = [
  { name = "Benoît Martin", email = "bmartin@cea.fr" }
]
requires-python = ">=3.10"
keywords = ["deisa", "in-situ"]

dependencies = [
  "deisa-core>=0.5.0",
  "dask>=2024.9.0",
  "distributed",
  "toolz",
  "numpy"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-retry",
  "pytest-timeout",
  "pytest-xdist"
]
mpi = [
  "mpi4py"
]

[project.urls]
Homepage = "https://github.com/deisa-project/deisa-dask"
"Bug Reports" = "https://github.com/deisa-project/deisa-dask/issues"
Source = "https://github.com/deisa-project/deisa-dask"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deisa.dask"]

[tool.setuptools.dynamic]
version = {attr = "deisa.dask.__version__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}